force-app/main/default/objects/Release__c/Release__c.object-meta.xml
<CustomObject>
    <description>SM - This Object will track project, support request and change request releases.</description>
    <label>Release</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Release Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>