force-app/main/default/objects/Release__c/recordTypes/CR_Gearset_Deploy_Release.recordType-meta.xml
<RecordType>
    <fullName>CR_Gearset_Deploy_Release</fullName>
    <active>true</active>
    <label>CR - Gearset Deploy Release</label>
</RecordType>