force-app/main/default/objects/Release__c/recordTypes/Data_Fix_Release.recordType-meta.xml
<RecordType>
    <fullName>Data_Fix_Release</fullName>
    <active>true</active>
    <label>PROD Data Change Release</label>
</RecordType>