force-app/main/default/objects/Release__c/recordTypes/Emergency_Release.recordType-meta.xml
<RecordType>
    <fullName>Emergency_Release</fullName>
    <active>true</active>
    <label>Emergency Release</label>
</RecordType>