force-app/main/default/objects/Release__c/recordTypes/Manual_Deploy_Release.recordType-meta.xml
<RecordType>
    <fullName>Manual_Deploy_Release</fullName>
    <active>true</active>
    <label>Config Change Release</label>
</RecordType>