force-app/main/default/objects/Release__c/recordTypes/Project_Release.recordType-meta.xml
<RecordType>
    <fullName>Project_Release</fullName>
    <active>true</active>
    <label>Project Release</label>
</RecordType>