force-app/main/default/objects/Release__c/validationRules/Require_Reason_for_Emergency_Release.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Reason_for_Emergency_Release</fullName>
    <active>true</active>
    <description>This will prevent from releasing an Em</description>
    <errorConditionFormula>ISChanged(Status__c)
&amp;&amp;
ISPICKVAL(Status__c, "Released")
&amp;&amp; 
ISBLANK(Reason_for_Emergency_Release__c)
&amp;&amp; 
RecordType.Name = 'Emergency Release'</errorConditionFormula>
    <errorDisplayField>Reason_for_Emergency_Release__c</errorDisplayField>
    <errorMessage>You must provide reason for creating an Emergency Release</errorMessage>
</ValidationRule>