force-app/main/default/objects/Release__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Release_Description__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Release_Date_Time__c</columns>
    <columns>Release_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>