force-app/main/default/objects/Release__c/listViews/Closed_Releases.listView-meta.xml
<ListView>
    <fullName>Closed_Releases</fullName>
    <columns>NAME</columns>
    <columns>Release_Date_Time__c</columns>
    <columns>Release_Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Released</value>
    </filters>
    <label>Closed Releases</label>
</ListView>