force-app/main/default/objects/Release__c/listViews/Monthly_Releases.listView-meta.xml
<ListView>
    <fullName>Monthly_Releases</fullName>
    <columns>NAME</columns>
    <columns>Release_Date_Time__c</columns>
    <columns>Release_Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>012d0000001tZjy</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Monthly Releases</label>
</ListView>