force-app/main/default/objects/Release__c/listViews/Scheduled_Releases.listView-meta.xml
<ListView>
    <fullName>Scheduled_Releases</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Release_Description__c</columns>
    <columns>Reason_for_Emergency_Release__c</columns>
    <columns>Release_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Scheduled Releases</label>
</ListView>